# society-of-researchers

./: .gitignore  README.md
backend/: .env.example  Dockerfile  pyproject.toml  railway.json
backend/src/sor/: config.py  main.py
backend/src/sor/engine/: __init__.py  conflict_detector.py  defaults.py  llm_client.py  orchestrator.py
backend/src/sor/models/: __init__.py  agent.py  conflict.py  events.py  project.py  stage.py
backend/src/sor/routes/: agents.py  documents.py  projects.py  stages.py
backend/src/sor/store/: database.py
frontend/: next.config.ts
frontend/src/app/: globals.css  layout.tsx  page.tsx
frontend/src/components/agents/: AgentCard.tsx  AgentConfigForm.tsx
frontend/src/components/pipeline/: PipelineCanvas.tsx
frontend/src/components/stage/: AgentOutputCard.tsx  DebateView.tsx
frontend/src/components/ui/: LayoutShell.tsx  MobileHeader.tsx  Sidebar.tsx
frontend/src/lib/: api.ts  sse.ts  types.ts
ios/: .gitignore  project.yml
ios/SocietyOfResearchers/: SocietyOfResearchersApp.swift
ios/SocietyOfResearchers.xcodeproj/: project.pbxproj
ios/SocietyOfResearchers/Models/: Agent.swift  Conflict.swift  Project.swift  Stage.swift
ios/SocietyOfResearchers/Services/: APIClient.swift  Configuration.swift  SSEClient.swift
ios/SocietyOfResearchers/Utilities/: MarkdownRenderer.swift  SpeechRecognizer.swift
ios/SocietyOfResearchers/ViewModels/: AgentManagementViewModel.swift  ProjectDetailViewModel.swift  ProjectListViewModel.swift  ReportViewModel.swift  StageViewModel.swift
ios/SocietyOfResearchers/Views/: HomeView.swift
(+26 files in other folders)
